# MemoryNote

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.dev.yaml  package.json  pnpm-lock.yaml
.github/workflows/: release-tauri.yml
apps/tauri/src/: main.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: remote.json
apps/tauri/src-tauri/src/: coding_config.rs  lib.rs  main.rs
apps/web-vue/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-vue/src/: App.vue  main.ts  router.ts  styles.css
apps/web-vue/src/components/: AppShell.vue  GraphLocalView.vue  RejectReasonModal.vue  SectionCard.vue
apps/web-vue/src/lib/: api.ts  graph-utils.ts
apps/web-vue/src/stores/: session.ts
apps/web-vue/src/types/: graphology-addons.d.ts
apps/web-vue/src/views/: ConversationView.vue  KnowledgeInboxView.vue  KnowledgeObjectView.vue  MemoryDocumentsView.vue  (+5 more)
apps/webapp/: package.json  server.js  server.ts  trigger.config.ts  tsconfig.json  vite.config.ts
apps/webapp/app/: entry.client.tsx  entry.server.tsx  env.server.ts  remixAdapter.ts  root.tsx  routeLoader.js  routeLoader.ts
apps/webapp/scripts/: seed-demo-graph.ts
apps/webapp/types/: gpt-tokenizer.d.ts  tinykeys.d.ts
docker/: Dockerfile.gateway
docs/: PROJECT_HANDOVER.md  PROJECT_TAKEOVER.md
docs/superpowers/specs/: 2026-05-02-graph-3d-design.md
hosting/docker/: .env.example  docker-compose.yaml
plugin/: .mcp.json
plugin/scripts/: cli.mjs
scripts/: cleanup-conversations.ts  rebuild-vector-indexes.ts  test-embedding.ts
(+166 files in other folders)
