[package]
name = "memorynote-desktop"
version = "0.1.0"
description = "MemoryNote Desktop App"
authors = []
edition = "2021"
default-run = "memorynote-desktop"

[lib]
name = "memorynote_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memorynote-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
portable-pty = "0.8"
ureq = { version = "2", features = ["json"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.9"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
